--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version= "4.4.2", features = ["derive"] }
 config = "0.13.3"
 serde = { version = "1.0.188", features = ["derive"] }
 toml = "0.8.0"
+ratatui-textarea = "0.3.2"
 
 
 [[bin]]
