Complete MVP color picker

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ serde = { version = "1.0.188", features = ["derive"] }
 toml = "0.8.0"
 ratatui-textarea = "0.3.2"
 hsv = "0.1.1"
+prisma = "0.1.1"
+angular-units = "0.2.4"
 
 
 [[bin]]
@@ -33,3 +35,7 @@ path = "src/test_import.rs"
 [[bin]]
 name = "test_config"
 path = "src/test_config.rs"
+
+[[bin]]
+name = "test_colors"
+path = "src/test_colors.rs"
