--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "upaint"
 version = "0.1.0"
 edition = "2021"
-default-run = "main"
+default-run = "upaint"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -23,7 +23,7 @@ dirs = "5.0.1"
 
 
 [[bin]]
-name = "main"
+name = "upaint"
 path = "src/main.rs"
 
 [[bin]]
