--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,8 @@ ratatui = { version = "0.23.0", features = ["all-widgets", "serde"] }
 anyhow = "1.0.75"
 crossterm = { version = "0.27.0", features = ["serde"] }
 clap = { version= "4.4.2", features = ["derive"] }
-config = "0.13.3"
+# config = "0.13.3"
+config = { git = "https://github.com/sigurdo/config-rs.git" }
 serde = { version = "1.0.188", features = ["derive"] }
 toml = "0.8.0"
 ratatui-textarea = "0.3.2"
