--- a/src/config/color_theme/presets/light.toml
+++ b/src/config/color_theme/presets/light.toml
@@ -1,37 +1,19 @@
-[status_bar]
+[color_theme.status_bar]
 fg = "Black"
 bg = "Gray"
 
-[command_line]
+[color_theme.command_line]
 fg = "Black"
 bg = "White"
 
-[input_mode]
+[color_theme.input_mode]
 fg = "Black"
 bg = "White"
 
-[user_feedback]
+[color_theme.user_feedback]
 fg = "Black"
 bg = "White"
 
-[canvas.default_style]
+[color_theme.canvas.default_style]
 fg = "Black"
 bg = "White"
-
-# [canvas.standard_colors]
-# black = "#1a1a1a"
-# red = "#f4005f"
-# green = "#98e024"
-# yellow = "#fa8419"
-# blue = "#9d65ff"
-# magenta = "#f332fa"
-# cyan = "#58d1eb"
-# white = "#c4c5b5"
-# bright_black = "#625e4c"
-# bright_red = "#f4005f"
-# bright_green = "#98e024"
-# bright_yellow = "#e0d561"
-# bright_blue = "#9d65ff"
-# bright_magenta = "#f332fa"
-# bright_cyan = "#58d1eb"
-# bright_white = "#f6f6ef"
