--- a/src/config/color_theme/base.toml
+++ b/src/config/color_theme/base.toml
@@ -6,6 +6,16 @@
 # The `modifiers` property is a `Modifier`, which is a combination of modifiers the possible modifiers are:
 # ("BOLD", "DIM", "ITALIC", "UNDERLINED", "SLOW_BLINK", "RAPID_BLINK", "REVERSED", "HIDDEN", "CROSSED_OUT")
 # , and combinations are created with `|`, e.g. "BOLD | ITALIC".
+[color_theme.row_numbers]
+fg = "Gray"
+bg = "Reset"
+modifiers = ""
+
+[color_theme.column_numbers]
+fg = "Gray"
+bg = "Reset"
+modifiers = ""
+
 [color_theme.status_bar]
 fg = "White"
 bg = "DarkGray"
@@ -54,3 +64,4 @@ bright_blue = "LightBlue"
 bright_magenta = "LightMagenta"
 bright_cyan = "LightCyan"
 bright_white = "White"
+
