--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,9 @@ angular-units = "0.2.4"
 unicode-width = "0.1.11"
 dirs = "5.0.1"
 log = "0.4.20"
+nalgebra = "0.32.5"
+lending-iterator = "0.1.7"
+bitflags = "2.5.0"
 
 
 [[bin]]
