--- a/src/config/color_theme/presets/vga.toml
+++ b/src/config/color_theme/presets/vga.toml
@@ -1,9 +1,9 @@
-[color_theme.canvas.default_style]
+[canvas.default_style]
 fg = "Gray"
 bg = "Black"
 
 # VGA colors as described at https://en.wikipedia.org/wiki/ANSI_escape_code
-[color_theme.canvas.standard_colors]
+[canvas.standard_colors]
 black = "#000000"
 red = "#aa0000"
 green = "#00aa00"
