--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,9 @@ clap = { version= "4.4.2", features = ["derive"] }
 # config = "0.13.3"
 config = { git = "https://github.com/sigurdo/config-rs.git" }
 serde = { version = "1.0.188", features = ["derive"] }
-toml = "0.8.0"
+# toml = "0.8.0"
+toml = { git = "https://github.com/sigurdo/toml-rs.git" }
+serde_json = "1.0.117"
 ratatui-textarea = "0.3.2"
 hsv = "0.1.1"
 prisma = "0.1.1"
@@ -25,6 +27,7 @@ log = "0.4.20"
 nalgebra = "0.32.5"
 lending-iterator = "0.1.7"
 bitflags = "2.5.0"
+enum_dispatch = "0.3.13"
 
 
 [[bin]]
