Reduce boilerplate for Vec wrapper KeystrokeSequence by using Deref through derive_more. Diagonal and stride jumping for canvas iteration. CharacterMatch canvas iteration stop condition.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ nalgebra = "0.32.5"
 lending-iterator = "0.1.7"
 bitflags = "2.5.0"
 enum_dispatch = "0.3.13"
-
+derive_more = "0.99.18"
 
 [[bin]]
 name = "upaint"
