--- a/src/config/color_theme/base.toml
+++ b/src/config/color_theme/base.toml
@@ -6,6 +6,8 @@
 # The `modifiers` property is a `Modifier`, which is a combination of modifiers the possible modifiers are:
 # ("BOLD", "DIM", "ITALIC", "UNDERLINED", "SLOW_BLINK", "RAPID_BLINK", "REVERSED", "HIDDEN", "CROSSED_OUT")
 # , and combinations are created with `|`, e.g. "BOLD | ITALIC".
+selection_highlighted_bg = "Gray"
+
 [row_numbers]
 fg = "Gray"
 bg = "Reset"
