--- a/src/config/default_config.toml
+++ b/src/config/default_config.toml
@@ -33,9 +33,10 @@ all = "a"
 "gp" = { "Pipette" = {}}
 "v" = { ModeVisualRect = {} }
 "o" = { SetSelectionActive = { highlight = true } }
+'"' = { SetYankActive = {} }
 "O" = { HighlightSelectionClear = {} }
 "P" = { Paste = {} }
-"p" = { Paste = { slot = "#" } }
+"p" = { Paste = { slot = "Active" } }
 "r" = { Operation = { motion = { Stay = {}}, operator = { Replace = {}}}}
 "R" = { Operation = { operator = { Replace = {}}}}
 "m" = { MarkSet = {}}
@@ -48,9 +49,9 @@ all = "a"
 "a" = { UpdateSelection = { operator = "Add", slot = "Active", highlight = true } }
 "s" = { UpdateSelection = { operator = "Subtract", slot = "Active", highlight = true } }
 "z" = { UpdateSelection = { operator = "Overwrite", slot = "Active", highlight = true } }
-"y" = { Yank = { content_type = "ALL", slot = "#" } }
+"y" = { Yank = { content_type = "ALL", slot = "Active" } }
 "D" = { Cut = { content_type = "ALL" } }
-"d" = { Cut = { content_type = "ALL", slot = "#" } }
+"d" = { Cut = { content_type = "ALL", slot = "Active" } }
 
 [keymaps.motions]
 " " = { Stay = {} }
