WIP derive Preset

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ bitflags = "2.5.0"
 enum_dispatch = "0.3.13"
 derive_more = "0.99.18"
 as-any = "0.3.1"
+upaint_derive = { version = "0.1.0", path = "upaint_derive" }
 
 [[bin]]
 name = "upaint"
