Enda mer rot. Lagre status før jeg fjerner <P> fra FromKeystrokes

--- a/src/config/default_config.toml
+++ b/src/config/default_config.toml
@@ -120,6 +120,9 @@ relative = false
 "s" = { Slot = "FromKeystrokes" }
 "" = { Color = "FromKeystrokes" }
 
+[keymaps.test]
+"h" = { a = "FromKeystrokes" }
+
 [keymaps.color_or_slot_specifications]
 
 [keymaps.canvas_iteration_jump]
