--- a/keystrokes_parsing/Cargo.toml
+++ b/keystrokes_parsing/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 serde = { version = "1.0.188", features = ["derive"] }
 crossterm = { version = "0.27.0", features = ["serde"] }
 derive_more = "0.99.18"
+keystrokes_parsing_derive = { path = "keystrokes_parsing_derive" }
