--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ derive_more = "0.99.18"
 as-any = "0.3.1"
 upaint_derive = { version = "0.1.0", path = "upaint_derive" }
 keystrokes_parsing = { path = "keystrokes_parsing" }
+nestify = "0.3.3"
 
 [[bin]]
 name = "upaint"
